# minesweeper

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  minesweeper.desktop
src/: main.cpp
